app/static/styles/subscriptions.css
/** APP/STATIC/STYLES/SUBSCRIPTIONS.CSS **/

/**** NEW/EDIT Page ****/
div#subscription-form-heading {
    font-size: 28px;
    margin-top: 1em;
}

div#subscription-form-info {
    font-size: 20px;
    font-weight: bold;
    margin-top: 1em;
}

/**** INDEX Page ****/
table#subscriptions-table span.explanation {
    font-size: 80%;
}

div.subscription-show-link {
    font-weight: bold;
    text-align: center;
}

/**** SHOW Page ****/
div#subscription-heading {
    font-size: 32px;
}

div#subscription-content {
    display: flex;
    margin-top: 2em;
}

div#subscription-sidebar {
    background: #f8f8f8;
    border: 2px solid #ddd;
    padding: 0.5em;
    width: 25em;
}

div#subscription-sidebar > section {
    margin-bottom: 1em;
}

div#subscription-illusts {
    font-size: 20px;
    font-weight: bold;
    margin-bottom: 1em;
}

div#subscription-site-content {
    width: 70%;
}

div#subscription-site-content h4 {
    text-decoration: underline;
}

div#subscription-site-content-1 {
    display: flex;
}

div#subscription-site-content-1 > section {
    margin-left: 1em;
}

div#subscription-site-content-1 span.heading {
    font-size: 1.33em;
}

section#subscription-settings {
    width: 25%;
}

section#subscription-status {
    width: 25%;
}

section#subscription-element-keep {
    width: 20%;
}

section#subscription-element-status {
    width: 20%;
}

div#subscription-site-content-2 {
    display: flex;
    width: 50%;
    border: 1px solid #ddd;
    margin-top: 2em;
    margin-left: 0.8em;
    padding: 5px;
}

div#subscription-intervals {
    width: 50%;
}

div#subscription-job {
    width: 50%;
}

div#subscription-elements {
    font-size: 24px;
    font-weight: bold;
    margin-top: 1em;
}

div#subscription-posts {
    margin-top: 2em;
}

/**** PROCESS Page ****/
ul#process-type,
ul#process-type li,
ul#process-type label,
ul#process-type input {
    display: inline-block;
}

ul#process-type label {
    font-size: 16px;
    margin-right: 1em;
}

form > div.media-timeline,
form > div.search-timeline,
form > div.recover-timeline {
    display: none;
}

form.media-timeline > div.media-timeline {
    display: block;
}

form.search-timeline > div.search-timeline {
    display: block;
}

/**** STATUS Page ****/

div#subscription-pending-elements table {
    font-size: 16px;
    margin-top: 0;
    margin-left: 0.5em;
}

div#subscription-pending-elements td.subscription-column {
    width: 70%;
}

div#subscription-pending-elements td.elements-column {
    width: 30%;
    text-align: right;
}

div#subscription-status > div {
    margin-bottom: 2em;
}

div#subscription-main-tasks > div,
div#subscription-expirations-section {
    display: flex;
}

div#subscription-main-tasks > div > div {
    width: 20%;
}

div#subscription-pending-elements > div.heading,
div#subscription-main-tasks > div.heading,
div#subscription-slots-per-hour > div.heading,
div#subscription-expirations > div.heading {
    font-size: 24px;
}

div#subscription-expirations-section > div {
    width: 12%;
}

div#subscription-populate-task > div.heading,
div#subscription-download-task > div.heading,
div#subscription-expirations-section div.heading {
    font-size: 18px;
}

table#subscriptions-table {
    margin-top: 0;
}

